# ppu

./: .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  STYLE.md  WORKSPACE  copyright_fixer.sh  license_template.erb  reformat-all.sh  syntax.yml
examples/python/distributed/: BUILD.bazel  __init__.py  config.py  context.py  core.proto  core.py  daemon.py  ppu_device.py  ppu_wrapper.py  py_device.py
examples/python/e2e/: BUILD.bazel  README.md  cnn.py  flax_dnn.py  flax_dnn_ppu.py  jax_lr.py  jax_lr_ppu.py  millionare.py  run_all.sh  tf_lr.py  tf_lr_ppu.py
examples/python/tests/: BUILD.bazel  io_test.py  nn_func_test.py  stax_utils.py  test_utils.py
ppu/: BUILD.bazel  build_and_install.sh  ppu.proto
ppu/binding/: BUILD.bazel  _lib.cc  link_test.py  ppu_compiler_test.py  ppu_io_test.py  ppu_jax_api_test.py  ppu_runtime_test.py  psi_test.py  test_util.py
ppu/binding/data/: BUILD.bazel
ppu/compiler/: .clang-format  BUILD.bazel  compile.cc  compile.h  main.cc  readme.md
ppu/compiler/codegen/: BUILD.bazel  codegen.cc  codegen.h
ppu/compiler/common/: BUILD.bazel  compilation_context.cc  compilation_context.h  ir_printer_config.cc  ir_printer_config.h
ppu/compiler/core/: BUILD.bazel  core.cc  core.h
ppu/compiler/front_end/: BUILD.bazel  fe.cc  fe.h  hlo_importer.cc  hlo_importer.h
ppu/compiler/passes/: BUILD.bazel  decompose_comparison.cc  decompose_divide.cc  decompose_select.cc  decompose_sqrt.cc  hlo_legalize_to_pphlo.cc  lower_conversion_cast.cc  map_mhlo_to_pphlo_op.h  pass_details.h  passes.h  passes.td  register_passes.h  value_visibility_map.cc  value_visibility_map.h  visibility_inference.cc  visibility_inference.h
ppu/compiler/test_data/: BUILD.bazel  credit_fraud.predict_step.before_optimizations.mlir  credit_fraud.test_step.before_optimizations.mlir  credit_fraud.train_step.before_optimizations.mlir  credit_fraud_metrics.predict_step.before_optimizations.mlir  credit_fraud_metrics.test_step.before_optimizations.mlir  credit_fraud_metrics.train_step.before_optimizations.mlir  empty_return_tuple.mlir  jax_cnn.mlir  jax_with_call.mlir  jit_comp.mlir  jit_keras.mlir  rebase.py
ppu/compiler/tests/: BUILD.bazel  decompose_comparison.mlir  decompose_divide.mlir  decompose_select.mlir  decompose_sqrt.mlir  end_to_end_test.cc  hlo_to_pphlo_comparison.mlir  hlo_to_pphlo_conditional.mlir  hlo_to_pphlo_conditional_tuple.mlir  hlo_to_pphlo_ops_binary.mlir  hlo_to_pphlo_ops_nullary.mlir  hlo_to_pphlo_ops_other.mlir  hlo_to_pphlo_ops_unary.mlir  hlo_to_pphlo_while.mlir  lit.cfg  pphlo_type_inference_all_public.mlir  pphlo_type_inference_all_secret.mlir  pphlo_type_inference_identity.mlir  (+1 more)
ppu/core/: BUILD.bazel  array_ref.cc  array_ref.h  array_ref_test.cc  array_ref_util.cc  array_ref_util.h  array_ref_util_test.cc  buffer.cc  buffer.h  encoding.cc  encoding.h  shape_util.h  shape_util_test.cc  trace.cc  trace.h  type.cc  type.h  type_test.cc  type_util.cc  type_util.h  vectorize.h  vectorize_test.cc
ppu/crypto/: BUILD.bazel  asymmetric_crypto.h  asymmetric_rsa_crypto.cc  asymmetric_rsa_crypto.h  asymmetric_rsa_crypto_test.cc  asymmetric_sm2_crypto.cc  asymmetric_sm2_crypto.h  asymmetric_sm2_crypto_test.cc  asymmetric_util.cc  asymmetric_util.h  blake3_hash.cc  blake3_hash.h  blake3_hash_bench.cc  blake3_hash_test.cc  digital_envelope.cc  digital_envelope.h  digital_envelope_test.cc  gcm_crypto.cc  gcm_crypto.h  gcm_crypto_test.cc  hash_interface.h  hash_util.cc  hash_util.h  hmac.cc  hmac.h  hmac_all_test.cc  hmac_sha256.h  hmac_sm3.h  pseudo_random_generator.h  pseudo_random_generator_test.cc  random_oracle.h  random_oracle_bench.cc  random_oracle_test.cc  rsa_signing.cc  rsa_signing.h  rsa_signing_test.cc  signing.h  sm2_signing.cc  sm2_signing.h  sm2_signing_test.cc  (+10 more)
ppu/crypto/ot/: aes.h  (+25 more)
ppu/device/: .clang-format  BUILD.bazel  colocated_io.cc  colocated_io.h  colocated_io.proto  frame.cc  frame.h  io_accessor.cc  io_accessor.h  io_accessor_test.cc  pphlo_executor.cc  pphlo_executor.h  processor.cc  processor.h  processor_debug_runner.cc  processor_test.cc  processor_test_utils.h  readme.md  symbol_table.cc  symbol_table.h
ppu/dialect/: BUILD.bazel  pphlo_attrs.h  pphlo_attrs.td  pphlo_base_enums.cc  pphlo_base_enums.h  pphlo_base_enums.td  pphlo_dialect.cc  pphlo_dialect.h  pphlo_dialect.td  pphlo_ops.cc  pphlo_ops.h  pphlo_ops.td  pphlo_types.cc  pphlo_types.h  pphlo_types.td
ppu/hal/: BUILD.bazel  README.md  array_element_wise_test.cc  const_util.cc  const_util.h  context.cc  context.h  conv.cc  conv.h  conv_test.cc  debug.cc  debug.h  dispatch.h  fxp.cc  fxp.h  fxp_test.cc  hal.h  integer.cc  integer.h  integer_test.cc  io_ops.cc  io_ops.h  permute_util.cc  permute_util.h  permute_util_test.cc  polymorphic.cc  polymorphic.h  polymorphic_test.cc  prot_wrapper.cc  prot_wrapper.h  public_intrinsic.cc  public_intrinsic.h  random.cc  random.h  reduce.cc  reduce.h  reduce_test.cc  ring.cc  ring.h  shape_ops.cc  (+13 more)
ppu/link/: BUILD.bazel  context.cc  context.h  context_test.cc  factory.h  factory_brpc.cc  factory_mem.cc  link.h  test_util.h
ppu/mpc/: BUILD.bazel  abkernels.cc  abkernels.h  arithmetic_test.cc  arithmetic_test.h  boolean_test.cc  boolean_test.h  compute_bench.cc  compute_bench.h  compute_test.cc  compute_test.h  factory.cc  factory.h  interfaces.cc  interfaces.h  io_interface.h  io_test.cc  io_test.h  kernel.cc  kernel.h  object.cc  object.h  prg_state.cc  prg_state.h  prg_state_test.cc
ppu/numpy/: BUILD.bazel  basic.cc  basic.h  initializer.cc  initializer.h  io.h  numpy.h  security.cc  security.h
ppu/psi/: BUILD.bazel  psi.cc  psi.h
ppu/utils/: BUILD.bazel  byte_container_view.h  byte_container_view_internal.h  byte_container_view_test.cc  exception.h  exception_test.cc  hamming.h  hamming_test.cc  int128.cc  int128.h  int128_bench.cc  int128_test.cc  parallel.h  parallel_common.cc  parallel_native.cc  parallel_native.h  parallel_test.cc  rand.h  scope_guard.h  scope_guard_test.cc  serializable.proto  serialize.cc  serialize.h  thread_pool.cc  thread_pool.h  thread_pool_test.cc
(+297 files in other folders)
