# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("//bazel:ppu.bzl", "ppu_version_file")

package(default_visibility = ["//visibility:public"])

PPU_VERSION = "0.0.4"

LICENSE = """
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""

proto_library(
    name = "ppu_proto",
    srcs = ["ppu.proto"],
)

cc_proto_library(
    name = "ppu_cc_proto",
    deps = [":ppu_proto"],
)

py_proto_library(
    name = "ppu_py_proto",
    deps = [":ppu_proto"],
)

py_library(
    name = "package",
    srcs = [
        "__init__.py",
        ":version_file",
    ],
    deps = [
        "//ppu/binding",
    ],
)

py_package(
    name = "ppu_pkg",
    deps = [
        ":package",
    ],
)

ppu_version_file(
    name = "version_file",
    filename = "version.py",
    version = PPU_VERSION,
)

py_wheel(
    name = "ppu_wheel",
    author = "secretflow",
    distribution = "sf-ppu",
    license = LICENSE,
    platform = select({
        "@bazel_tools//src/conditions:darwin": "macosx_10_14_x86_64",
        "//conditions:default": "manylinux2014_x86_64",
    }),
    python_requires = ">=3.8",
    python_tag = "py3",
    requires = [
        "protobuf",
    ],
    version = PPU_VERSION,
    deps = [":ppu_pkg"],
)
