
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

pybind_extension(
    name = "_lib",
    srcs = ["_lib.cc"],
    deps = [
        "//ppu/compiler:compile",
        "//ppu/compiler/common:compilation_context",
        "//ppu/device",
        "//ppu/link",
        "//ppu/psi",
        "//ppu/psi/core:ecdh_psi",
    ],
)

py_library(
    name = "binding",
    srcs = ["__init__.py"],
    data = [
        ":_lib.so",
    ],
    deps = [
        "//ppu:ppu_py_proto",
    ],
)

py_test(
    name = "ppu_compiler_test",
    srcs = ["ppu_compiler_test.py"],
    data = [
        "//ppu/binding/data:hlo_example",
    ],
    deps = [
        ":binding",
        ":test_util",
    ],
)

py_test(
    name = "ppu_runtime_test",
    srcs = ["ppu_runtime_test.py"],
    deps = [
        ":binding",
        ":test_util",
    ],
)

py_test(
    name = "ppu_io_test",
    srcs = ["ppu_io_test.py"],
    deps = [
        ":binding",
        ":test_util",
    ],
)

py_test(
    name = "link_test",
    srcs = ["link_test.py"],
    deps = [
        ":binding",
    ],
)

py_library(
    name = "test_util",
    srcs = ["test_util.py"],
    deps = [
        ":binding",
    ],
)

py_test(
    name = "psi_test",
    srcs = ["psi_test.py"],
    data = [
        "//ppu/binding/data",
    ],
    deps = [
        ":binding",
        ":test_util",
    ],
)
