
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_binary", "ppu_cc_library")

package(
    default_visibility = ["//visibility:public"],
)

ppu_cc_binary(
    name = "main",
    srcs = ["main.cc"],
    tags = ["no-remote-cache"],
    deps = [
        ":compile",
    ],
)

ppu_cc_library(
    name = "compile",
    srcs = ["compile.cc"],
    hdrs = ["compile.h"],
    deps = [
        "//ppu/compiler/codegen",
        "//ppu/compiler/common:compilation_context",
        "//ppu/compiler/core",
        "//ppu/compiler/front_end:fe",
    ],
)
