
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_library", "ppu_cc_test")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "context",
    srcs = ["context.cc"],
    hdrs = ["context.h"],
    deps = [
        "//ppu/core:buffer",
        "//ppu/link/algorithm:trace",
        "//ppu/link/transport:channel",
    ],
)

ppu_cc_library(
    name = "factory",
    srcs = [
        "factory_brpc.cc",
        "factory_mem.cc",
    ],
    hdrs = ["factory.h"],
    deps = [
        ":context",
        "//ppu/link/transport:channel_brpc",
        "//ppu/link/transport:channel_mem",
    ],
)

ppu_cc_test(
    name = "context_test",
    srcs = ["context_test.cc"],
    deps = [
        ":context",
        ":factory",
    ],
)

ppu_cc_library(
    name = "link",
    hdrs = ["link.h"],
    deps = [
        ":context",
        ":factory",
        ":test_util",
        "//ppu/link/algorithm:allgather",
        "//ppu/link/algorithm:barrier",
        "//ppu/link/algorithm:broadcast",
        "//ppu/link/algorithm:gather",
        "//ppu/link/algorithm:scatter",
    ],
)

ppu_cc_library(
    name = "test_util",
    hdrs = ["test_util.h"],
    deps = [
        "//ppu/core:buffer",
        "//ppu/link:context",
        "//ppu/link:factory",
        "@com_github_fmtlib_fmt//:fmtlib",
    ],
)
