
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "millionare",
    srcs = ["millionare.py"],
    data = [
        "//examples/python/conf",
    ],
    deps = [
        "//examples/python/distributed",
        "//examples/python/utils:fe_utils",
    ],
)

py_library(
    name = "tf_lr",
    srcs = ["tf_lr.py"],
    deps = [
        "//examples/python/utils:dataset_utils",
    ],
)

py_binary(
    name = "tf_lr_ppu",
    srcs = ["tf_lr_ppu.py"],
    data = [
        "//examples/python/conf",
    ],
    deps = [
        ":tf_lr",
        "//examples/python/distributed",
        "//examples/python/utils:fe_utils",
    ],
)

py_library(
    name = "jax_lr",
    srcs = ["jax_lr.py"],
    deps = [
        "//examples/python/utils:dataset_utils",
    ],
)

py_binary(
    name = "jax_lr_ppu",
    srcs = ["jax_lr_ppu.py"],
    data = [
        "//examples/python/conf",
    ],
    deps = [
        ":jax_lr",
        "//examples/python/distributed",
        "//examples/python/utils:fe_utils",
    ],
)

py_library(
    name = "flax_dnn",
    srcs = ["flax_dnn.py"],
    deps = [
        "//examples/python/utils:dataset_utils",
    ],
)

py_binary(
    name = "flax_dnn_ppu",
    srcs = ["flax_dnn_ppu.py"],
    data = [
        "//examples/python/conf",
    ],
    deps = [
        ":flax_dnn",
        "//examples/python/distributed",
        "//examples/python/utils:dataset_utils",
        "//examples/python/utils:fe_utils",
    ],
)

py_binary(
    name = "cnn",
    srcs = ["cnn.py"],
    data = [
        "//examples/python/conf",
    ],
    deps = [
        "//examples/python/distributed",
        "//examples/python/utils:dataset_utils",
        "//examples/python/utils:fe_utils",
    ],
)
