
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "test_utils",
    srcs = ["test_utils.py"],
    deps = [
        "//examples/python/distributed",
    ],
)

py_library(
    name = "stax_utils",
    srcs = ["stax_utils.py"],
    deps = [
        "//examples/python/distributed",
    ],
)

py_test(
    name = "io_test",
    srcs = ["io_test.py"],
    deps = [
        ":test_utils",
    ],
)

py_test(
    name = "nn_func_test",
    srcs = ["nn_func_test.py"],
    deps = [
        ":stax_utils",
        ":test_utils",
        "//examples/python/utils:fe_utils",
    ],
)
